add allow typing feature

--- a/src/kamadatepicker.scss
+++ b/src/kamadatepicker.scss
@@ -130,6 +130,6 @@
 }
 
 /* remove space between number of date when typing */
-input {
-    word-spacing:-3px;
-}
+// input {
+//     word-spacing:-3px;
+// }
